--- a/site/public/case-studies/research-gate.html
+++ b/site/public/case-studies/research-gate.html
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-      <p>&copy; Dhruvi Malusare • <a href="https://www.linkedin.com/in/dhruvi-malusare/">LinkedIn</a></p>
+      <p>&copy; Dhruvi Malusare • <a href="mailto:drm23@njit.edu">drm23@njit.edu</a> • <a href="https://www.linkedin.com/in/dhruvi-malusare/">LinkedIn</a> • <a href="https://drive.google.com/file/d/1jTkieE-YEUbyg7JlNmd31w7dVF_IyLep/view?usp=sharing" target="_blank" rel="noopener">Resume</a></p>
     </footer>
   </div>
   <script src="/site/public/js/main.js"></script>
