--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer class="container">
       <p>&copy; Dhruvi Malusare • <a href="mailto:drm23@njit.edu">drm23@njit.edu</a> • <a href="https://www.linkedin.com/in/dhruvi-malusare/">LinkedIn</a> • <a href="https://drive.google.com/file/d/1jTkieE-YEUbyg7JlNmd31w7dVF_IyLep/view?usp=sharing" target="_blank" rel="noopener">Resume</a></p>
     </footer>
-    <link rel="stylesheet" href="/site/public/styles.css">
-    <script src="/site/public/js/main.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="js/main.js"></script>
   </body>
 </html>
